# ToDo-REST-DRF

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
nginx/: Dockerfile  nginx.conf
provision/: django.py  project.py
server/: pyproject.toml  setup.cfg
server/apps/account/: apps.py  serializers.py  urls.py  views.py
server/apps/core/: services.py  views.py
server/apps/core/services/: __init__.py
server/apps/todos/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
server/apps/todos/migrations/: 0001_initial.py
server/apps/wall/: admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/config/: api_router.py  celery.py  gunicorn.py
server/config/settings/: __init__.py  drf.py  email.py  installed_apps.py  settings.py
server/config/test/: __init__.py
server/scripts/: fill_sample_data.py
server/todo/: settings.py
todo/: db.sqlite3
todo/account/: serializers.py  urls.py  utils.py  views.py
todo/todo/: settings.py  urls.py  yasg.py
todo/todos/: models.py  serializers.py  urls.py  views.py
todo/todos/migrations/: 0001_initial.py  0002_alter_task_done.py  0003_alter_task_user.py
todo/wall/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todo/wall/migrations/: 0001_initial.py  0002_auto_20211121_0044.py  0003_delete_comment.py  0004_auto_20211123_1121.py  0005_comment.py  0006_alter_comment_parent.py  0007_remove_comment_parent.py  0008_alter_comment_options.py  0009_post_text.py
(+1 files in other folders)
